<resources>
    <string name="app_name">Slades</string>

    <!-- Bottom Navigation Bar -->
    <string name="navBar_title_vehicles">Vehicles</string>
    <string name="navBar_title_authorities">Authorities</string>

    <!-- Action Bar Menu -->
    <string name="action_bar_about_title">About</string>
    <string name="action_bar_preferences_title">Settings</string>

    <!-- Main Activity strings -->
    <string name="no_connectivity_dialog_positive_button_text">Open Settings</string>
    <string name="no_connectivity_dialog_negative_button_text">Quit</string>
    <string name="no_connectivity_dialog_message">
        No connectivity to database found. Please check your settings.
    </string>
    <string name="no_connectivity_dialog_welcome_message">
        Please configure the database before proceeding.
    </string>
    <string name="no_connectivity_dialog_welcome_title">Welcome to Slades</string>

    <!-- Vehicles Tabs Titles -->
    <string name="vehicles_tab_summary_title">Summary</string>
    <string name="vehicles_tab_vehicle_detail_title">Vehicle</string>

    <!-- Vehicles Summary Strings -->
    <string name="vehicles_summary_header_title">Vehicle Management System</string>
    <string name="vehicles_summary_connected_cars_hint">Total Vehicles:</string>
    <string name="vehicles_summary_connected_cars_loading_hint">... please wait ...</string>
    <string name="vehicles_summary_obstacles_spotted_hint">Obstacles Spotted:</string>
    <string name="vehicles_summary_obstacles_spotted_loading_hint">... please wait ...</string>
    <string name="vehicles_summary_active_simulations_hint">Active Simulations:</string>
    <string name="vehicles_summary_total_latency_hint">Average Latency (ms):</string>
    <string name="vehicles_summary_logo_icon_desc">Application logo</string>
    <string name="vehicles_summary_simulation_spotted_obstacles_hint">Obstacles on Simulator:</string>
    <string name="vehicles_summary_system_status_header_title">System Status</string>
    <string name="vehicles_summary_simulator_header_title">Simulator Status</string>

    <!-- Vehicle Detail String -->
    <string name="vehicles_vehicle_title_hint">Title</string>
    <string name="vehicles_vehicle_title_prefix">Vehicle</string>
    <string name="vehicles_vehicle_image_description">ClipArt of Vehicle</string>
    <string name="vehicles_vehicle_operation_switch_stopped_text">Start</string>
    <string name="vehicles_vehicle_operation_switch_started_text">Stop</string>
    <string name="vehicles_vehicle_licenseNo_hint">License No:</string>
    <string name="vehicles_vehicle_manufacturer_hint">Manufacturer:</string>
    <string name="vehicles_vehicle_model_hint">Model:</string>
    <string name="vehicles_vehicle_autodrivingsys_name_hint">Auto-Driving Sys:</string>
    <string name="vehicles_vehicle_autodrivingsys_version_hint">Auto-Driving Sys Version:</string>
    <string name="vehicles_vehicle_autonomylevel_hint">Autonomy Level:</string>
    <string name="vehicles_vehicle_sim_stopped_hint">-- Simulation not Running --</string>
    <string name="vehicles_vehicle_sim_latency_hint">Latency (ms):</string>
    <string name="vehicles_vehicle_sim_update_interval_hint">Update Interval (ms):</string>
    <string name="vehicles_vehicle_sim_update_latency_wait_hint">... please wait ...</string>
    <string name="vehicles_vehicle_sim_spotted_obstacles_hint">Spotted Obstacles:</string>

    <!-- Authorities Tabs Titles -->
    <string name="authorities_tab_roadsideunits_title">Roadside Units</string>
    <string name="authorities_tab_obstacles_title">Obstacles</string>

    <!-- Roadside Units Fragment Strings -->
    <string name="roadside_units_items_type_hint">Sensor Type</string>
    <string name="roadside_units_items_operator_hint">Operator:</string>
    <string name="roadside_units_items_last_service_hint">Last Service:</string>
    <string name="roadside_units_items_id_hint">Id</string>
    <string name="roadside_units_items_manufacturer_hint">Manufacturer:</string>
    <string name="roadside_units_search_bar_hint">Search roadside units</string>
    <string name="roadside_units_item_fix_button_text">Sensor Fixed</string>
    <string name="roadside_units_item_break_button_text">Set Broken</string>

    <!-- Obstacles Fragment Strings -->
    <string name="obstacles_items_type_hint">Obstacle Type</string>
    <string name="obstacles_items_id_hint">Obstacle Id</string>
    <string name="obstacles_items_firstly_spotted_date_hint">Firstly Spotted:</string>
    <string name="obstacles_items_lastly_spotted_date_hint">Lastly Spotted:</string>
    <string name="obstacles_search_bar_hint">Search obstacle</string>
    <string name="obstacles_item_cleanup_button_text">Cleared</string>

    <!-- Preferences Screen Strings -->
    <string name="preferences_db_category_title">Database Preferences</string>
    <string name="preference_db_hostname_title">Hostname</string>
    <string name="preference_db_port_title">Port</string>
    <string name="preference_db_username_title">User</string>
    <string name="preference_db_password_title">Password</string>
    <string name="preference_db_dbname_title">Database</string>

    <!-- About Screen Strings -->
    <string name="about_logo_description">Application logo</string>
    <string name="about_app_name">Slades Companion</string>
    <string name="about_creator">
        Created by Dimitrios Karageorgiou
        \n\-\- karageods@auth.gr \-\-
        \n\n Assisted by Anastasia Katrana and Lefteris Kilaroglou
    </string>
    <string name="about_more">
        During course \"Database Systems\"
        \nElectrical and Computers Engineering Department
        \nAuTh, GR - 2018-2019 \n
        \nSource code can be found on Github:
        \nhttps://github.com/dkarageo/SladesCompanion
        \n\nLicensed under GNU GPL v3.0 license.
    </string>
    <string name="about_version_hint">Version: </string>
    <string name="about_version">0.1.1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
