<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="16dp">

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:src="@drawable/rect_logo_512_512"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/about_logo_description" />

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/about_app_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/about_version_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_title"
            android:columnCount="2">

            <TextView
                android:id="@+id/about_version_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version_hint"
                android:layout_marginEnd="8dp"/>

                <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version" />
        </GridLayout>

        <TextView
            android:id="@+id/about_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_version_table"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:lineHeight="20dp"
            android:textAlignment="center"
            android:text="@string/about_creator"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_creator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/about_more"
            android:textStyle="normal"
            app:lineHeight="20dp"
            android:textAlignment="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>