<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vehicles.VehiclesSummaryPage" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/vehicles_summary_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="@string/vehicles_summary_header_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/vehicles_summary_logo_icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintTop_toBottomOf="@id/vehicles_summary_header_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:src="@drawable/rect_logo_512_512"
            android:contentDescription="@string/vehicles_summary_logo_icon_desc" />

        <View
            android:id="@+id/vehicles_summary_logo_info_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/vehicles_summary_logo_icon"
            android:layout_marginTop="16dp" />

        <android.support.v7.widget.GridLayout
            android:id="@+id/vehicles_summary_general_info_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:layout_constraintTop_toBottomOf="@id/vehicles_summary_logo_info_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/vehicles_summary_system_status_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_columnSpan="2"
                android:textSize="16sp"
                app:layout_gravity="center"
                android:text="@string/vehicles_summary_system_status_header_title"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/vehicles_summary_connected_cars_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_summary_connected_cars_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/vehicles_summary_connected_cars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_summary_connected_cars_loading_hint"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/vehicles_summary_obstacles_spotted_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_summary_obstacles_spotted_hint"
                android:layout_marginBottom="4dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/vehicles_summary_obstacles_spotted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_summary_obstacles_spotted_loading_hint"
                android:hint="@string/vehicles_summary_obstacles_spotted_hint"
                android:textSize="14sp" />

            <View
                android:id="@+id/vehicles_summary_vehicles_simulation_info_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@id/vehicles_summary_logo_icon"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:layout_columnSpan="2" />

            <TextView
                android:id="@+id/vehicles_summary_simulator_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_columnSpan="2"
                android:textSize="16sp"
                app:layout_gravity="center"
                android:text="@string/vehicles_summary_simulator_header_title"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/vehicles_summary_active_simulations_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_summary_active_simulations_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicles_summary_active_simulations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_summary_active_simulations_hint"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicles_summary_simulation_spotted_obstacles_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_summary_simulation_spotted_obstacles_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/vehicles_summary_simulation_spotted_obstacles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_summary_simulation_spotted_obstacles_hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/vehicles_summary_total_latency_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_summary_total_latency_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicles_summary_total_latency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_summary_total_latency_hint"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:textStyle="bold" />

        </android.support.v7.widget.GridLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>