<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vehicles.VehicleDetailPage" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Button
            android:id="@+id/vehicles_vehicle_destroy_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/vehicle_detail_destroy_button_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/vehicles_vehicle_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/vehicles_vehicle_title_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/vehicles_vehicle_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:contentDescription="@string/vehicles_vehicle_image_description"
            app:layout_constraintTop_toBottomOf="@id/vehicles_vehicle_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/vehicles_vehicle_operation_switch"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintTop_toTopOf="@id/vehicles_vehicle_image"
            app:layout_constraintBottom_toBottomOf="@id/vehicles_vehicle_image"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/vehicles_vehicle_operation_switch_stopped_text"
            android:background="@drawable/vehicle_detail_operation_switch_bg_stopped"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <View
            android:id="@+id/vehicles_vehicle_header_body_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/vehicles_vehicle_image"
            android:layout_marginTop="16dp" />

        <android.support.v7.widget.GridLayout
            android:id="@+id/vehicles_vehicle_parameters_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:layout_constraintTop_toBottomOf="@id/vehicles_vehicle_header_body_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/vehicles_vehicle_licenseNo_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_vehicle_licenseNo_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicles_vehicle_licenseNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_vehicle_licenseNo_hint"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vehicles_vehicle_manufacturer_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_vehicle_manufacturer_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/vehicles_vehicle_manufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_vehicle_manufacturer_hint" />

            <TextView
                android:id="@+id/vehicles_vehicle_model_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_vehicle_model_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/vehicles_vehicle_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_vehicle_model_hint" />

            <TextView
                android:id="@+id/vehicles_vehicle_autodrivingsys_name_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_vehicle_autodrivingsys_name_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/vehicles_vehicle_autodrivingsys_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_vehicle_autodrivingsys_name_hint" />


            <TextView
                android:id="@+id/vehicles_vehicle_autodrivingsys_version_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_vehicle_autodrivingsys_version_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/vehicles_vehicle_autodrivingsys_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_vehicle_autodrivingsys_version_hint" />

            <TextView
                android:id="@+id/vehicles_vehicle_autonomylevel_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_vehicle_autonomylevel_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/vehicles_vehicle_autonomylevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_vehicle_autonomylevel_hint" />

        </android.support.v7.widget.GridLayout>

        <View
            android:id="@+id/vehicles_vehicle_body_siminfo_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/vehicles_vehicle_parameters_table"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/vehicles_vehicle_sim_stopped_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicles_vehicle_sim_stopped_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/vehicles_vehicle_body_siminfo_divider"
            android:layout_marginTop="16dp" />

        <android.support.v7.widget.GridLayout
            android:id="@+id/vehicles_vehicle_sim_parameters_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:layout_constraintTop_toBottomOf="@id/vehicles_vehicle_body_siminfo_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/vehicles_vehicle_sim_latency_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_vehicle_sim_latency_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/vehicles_vehicle_sim_latency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/vehicles_vehicle_sim_update_interval_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicles_vehicle_sim_update_interval_hint"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/vehicles_vehicle_sim_update_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vehicles_vehicle_sim_update_interval_hint" />
        </android.support.v7.widget.GridLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>